platform/kyverno/manifests/apps/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-nexus-image-signatures
spec:
  admission: true
  validationFailureAction: Enforce
  background: true
  emitWarning: false
  rules:
    - name: verify-nexus-images
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - apps
      verifyImages:
        - type: Cosign
          imageReferences:
            - "863547508328.dkr.ecr.ap-southeast-1.amazonaws.com/nexus-auth-service:*"
            - "863547508328.dkr.ecr.ap-southeast-1.amazonaws.com/nexus-profile-service:*"
          mutateDigest: false
          useCache: true
          verifyDigest: false
          required: true
          imageRegistryCredentials:
            providers:
              - amazon
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/nguyentin05/nexus-app/.github/workflows/cd.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
                  signatureAlgorithm: sha256
          attestations:
            - type: https://spdx.dev/Document
              attestors:
                - entries:
                    - keyless:
                        subject: "https://github.com/nguyentin05/nexus-app/.github/workflows/cd.yml@refs/heads/main"
                        issuer: "https://token.actions.githubusercontent.com"
                        rekor:
                          url: https://rekor.sigstore.dev
                      signatureAlgorithm: sha256
    - name: verify-monitoring-agent-image
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - monitoring
      verifyImages:
        - type: Cosign
          imageReferences:
            - "863547508328.dkr.ecr.ap-southeast-1.amazonaws.com/nexus-monitoring-agent:*"
          mutateDigest: false
          useCache: true
          verifyDigest: false
          required: true
          imageRegistryCredentials:
            providers:
              - amazon
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/nguyentin05/nexus-monitoring-agent/.github/workflows/cd.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
                  signatureAlgorithm: sha256
          attestations:
            - type: https://spdx.dev/Document
              attestors:
                - entries:
                    - keyless:
                        subject: "https://github.com/nguyentin05/nexus-monitoring-agent/.github/workflows/cd.yml@refs/heads/main"
                        issuer: "https://token.actions.githubusercontent.com"
                        rekor:
                          url: https://rekor.sigstore.dev
                      signatureAlgorithm: sha256
